# rebels-solution

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
rebels/: solution.py
