[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebels"
version = "0.0.2"
authors = [
  { name="Rebels.ai", email="hello@rebels.ai" },
]
description = "Solution from Rebels"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/rebels-ai/rebels-solution"
